--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=trueblog
+# Banco local - codeblog
+spring.datasource.url=jdbc:postgresql://localhost:5432/codeblog
+spring.datasource.username=postgres
+spring.datasource.password=937158
+spring.jpa.hibernate.ddl-auto=update
